bk_ida/gccida/g2/noce_get_condition
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:1983:4: error: expected ';' after expression
rtx v10; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:1983:5: error: use of undeclared identifier 'v10'
rtx v10; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:1985:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:1986:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v14; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:1991:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = ( __int64)pc_set( jump)[1]; 
               ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:1997:28: error: invalid operands to binary expression ('uint64' (aka 'unsigned long long') and 'struct rtx_def')
v2 = *( _QWORD *)( v4 + 8) == jump[4]; 
     ~~~~~~~~~~~~~~~~~~~~~ ^  ~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:2001:42: error: expected ')'
v7 = canonicalize_condition( jump, ( rtx)v5, v2, earliest, 0LL); 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:2001:28: note: to match this '('
v7 = canonicalize_condition( jump, ( rtx)v5, v2, earliest, 0LL); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:2013:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v9.rtwint = ( __int64)v7->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:2014:36: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( _WORD *)v9.rtwint == 61 && mode_class_0[*( unsigned __int8 *)( v9.rtwint + 2)] == MODE_INT ) 
                                   ^~~~~~~~~~~~
                                   mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:2016:42: error: expected ')'
v7 = canonicalize_condition( jump, ( rtx)v5, v2, earliest, v9.rtx); 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:2016:28: note: to match this '('
v7 = canonicalize_condition( jump, ( rtx)v5, v2, earliest, v9.rtx); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:2019:1: error: use of undeclared identifier 'v10'
v10 = *earliest; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:2022:30: error: use of undeclared identifier 'v10'
while ( rtx_class[*( _WORD *)v10] != 105 || !modified_in_p( v7, v10) ) 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:2022:65: error: use of undeclared identifier 'v10'
while ( rtx_class[*( _WORD *)v10] != 105 || !modified_in_p( v7, v10) ) 
                                                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:2024:1: error: use of undeclared identifier 'v10'
v10 = v10[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:2024:7: error: use of undeclared identifier 'v10'; did you mean 'v12'?
v10 = v10[1].fld[0].rtx; 
      ^~~
      v12
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:1984:18: note: 'v12' declared here
 struct rtx_def *v12; // r12 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:2025:14: error: use of undeclared identifier 'v10'
if ( jump == v10 ) 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:2041:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[*( unsigned __int8 *)( v6 + 2)] != MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:2044:12: error: expected ';' after expression
v7 = ( rtx)v5; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/ifcvt.c:2049:28: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v14 = reverse_condition( ( rtx_code)*v5); 
                           ^~~~~~~~
                           rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/noce_get_condition/src/obj/ifcvt.o] Error 1
